--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color: #93F9CB;
+}                                                                                                                                                                                                                                                                                                                                                                           ` 
+#secondTeam{
+  text-align: right;
+}
+.section2 {
+  text-align: left;
+  float: left;
+}
+.section1 {
+  text-align: right;
+  float: right;
+}
+.middleSection {
+  margin-left: 500px;
 }
